pkg/app/pipedv1/executor/kubernetes/testdata/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 10
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      initContainers:
      - image: gcr.io/pipecd/init:v0.1.0
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        env:
        - name: CONFIG_ENV
          valueFrom:
            configMapKeyRef:
              key: key
              name: configmap-name-2
        - name: SECRET_ENV
          valueFrom:
            secretKeyRef:
              key: key
              name: secret-name-1
        envFrom:
        - configMapRef:
            name: configmap-name-2
        - secretRef:
            name: secret-name-1
      containers:
      - args:
        - server
        image: gcr.io/pipecd/helloworld:v0.1.0-73-ge191187
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        env:
        - name: CONFIG_ENV
          valueFrom:
            configMapKeyRef:
              key: key
              name: configmap-name-2
            configMapKeyRef:
              key: key2
              name: not-managed-config-map
        - name: SECRET_ENV
          valueFrom:
            secretKeyRef:
              key: key
              name: secret-name-1
        envFrom:
        - configMapRef:
            name: configmap-name-2
        - secretRef:
            name: secret-name-1
        resources: {}
      volumes:
      - name: secret-1
        secret:
          defaultMode: 256
          secretName: secret-name-1
      - name: secret-2
        secret:
          defaultMode: 256
          secretName: secret-name-2
      - configMap:
          defaultMode: 420
          name: configmap-name-1
        name: config-1
      - configMap:
          defaultMode: 420
          name: configmap-name-2
        name: config-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-canary
  creationTimestamp: 
spec:
  replicas: 9
  selector:
    matchLabels:
      app: simple
      pipecd.dev/variant: canary-variant
  strategy: {}
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: simple
        pipecd.dev/variant: canary-variant
    spec:
      initContainers:
      - image: gcr.io/pipecd/init:v0.1.0
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        env:
        - name: CONFIG_ENV
          valueFrom:
            configMapKeyRef:
              key: key
              name: configmap-name-2-canary
        - name: SECRET_ENV
          valueFrom:
            secretKeyRef:
              key: key
              name: secret-name-1-canary
        envFrom:
        - configMapRef:
            name: configmap-name-2-canary
        - secretRef:
            name: secret-name-1-canary
        resources: {}
      containers:
      - args:
        - server
        image: gcr.io/pipecd/helloworld:v0.1.0-73-ge191187
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        env:
        - name: CONFIG_ENV
          valueFrom:
            configMapKeyRef:
              key: key
              name: configmap-name-2-canary
            configMapKeyRef:
              key: key2
              name: not-managed-config-map
        - name: SECRET_ENV
          valueFrom:
            secretKeyRef:
              key: key
              name: secret-name-1-canary
        envFrom:
        - configMapRef:
            name: configmap-name-2-canary
        - secretRef:
            name: secret-name-1-canary
        resources: {}
      volumes:
      - name: secret-1
        secret:
          defaultMode: 256
          secretName: secret-name-1-canary
      - name: secret-2
        secret:
          defaultMode: 256
          secretName: secret-name-2
      - configMap:
          defaultMode: 420
          name: configmap-name-1
        name: config-1
      - configMap:
          defaultMode: 420
          name: configmap-name-2-canary
        name: config-2
status: {}
