pkg/app/pipedv1/executor/kubernetes/testdata/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  ports:
  - port: 9085
    protocol: TCP
    targetPort: 9085
  selector:
    app: simple
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: simple-canary
  creationTimestamp: 
spec:
  ports:
  - port: 9085
    protocol: TCP
    targetPort: 9085
  selector:
    app: simple
    pipecd.dev/variant: canary-variant
  type: ClusterIP
status:
  loadBalancer: {}
